[package]
name = "unicom"
version = "0.1.0"
authors = ["moz-sec <m0253c@gmail.com>"]
edition = "2021"

license = "MIT"
description = "unicom is Universal Compressor"
repository = "https://github.com/moz-sec/unicom"
readme = "README.md"
categories = ["rust", "cli", "compression", "command-line", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
zip = "1.3.0"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
